[package]
name = "sensirion-SLF"
version = "0.2.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
byteorder = { version = "1.5.0", default-features = false }
anyhow = { version = "1.0", default-features = false }
sensirion-i2c = "0.4.0"
bitbybit = "1.4.0"

[dev-dependencies]
embedded-hal-mock = "0.11.1"

[features]
fake_sensor = []
default = []